CKA/tasks-ec/deploy_1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: probe-app
  name: probe-app
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: probe-app
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 5
    readinessProbe:
      httpGet:
        path: /started
        port: 8080
      periodSeconds: 2
      initialDelaySeconds: 0
      failureThreshold: 3
      successThreshold: 1
