CKA/tasks-ec/mysql-pod-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mysql-pod
  name: mysql-pod
spec:
  containers:
  - image: mysql:5.7
    name: mysql-pod
    volumeMounts:
    - name: db-secret
      mountPath: /credentials
    ports:
    - containerPort: 3306
      name: mysql
  volumes:
  - name: db-secret
    secret:
      secretName: db-secret
