CKA/tasks-ec/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mysql-secret
  name: mysql-secret
spec:
  containers:
  - image: mysql
    name: mysql-secret
