CKA/tasks-ec/pod-nginx-proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-proxy
  name: nginx-proxy
spec:
  containers:
  - image: nginx
    name: nginx-proxy
