CKA/tasks-ec/pod_3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app1
  name: app1
spec:
  containers:
  - image: evolvecybertraining/args-app:v1
    name: app1cont
    args:
    - -Q
    - --dep
    - test
